test/spec/align.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/align.wast
(;; STDOUT ;;;
out/third_party/testsuite/align.wast:2: assert_malformed passed:
  out/third_party/testsuite/align/align.0.wast:1:42: alignment must be power-of-two
  (module (memory 0) (func (drop (i64.load align=0 (i32.const 0)))))
                                           ^^^^^^^
out/third_party/testsuite/align.wast:8: assert_malformed passed:
  out/third_party/testsuite/align/align.1.wast:1:42: alignment must be power-of-two
  (module (memory 0) (func (drop (i64.load align=7 (i32.const 0)))))
                                           ^^^^^^^
out/third_party/testsuite/align.wast:14: assert_invalid passed:
  error: alignment must not be larger than natural alignment (8)
  error: @0x00000021: OnLoadExpr callback failed
out/third_party/testsuite/align.wast:19: assert_malformed passed:
  out/third_party/testsuite/align/align.3.wast:1:37: alignment must be power-of-two
  (module (memory 0) (func (i64.store align=0 (i32.const 0) (i64.const 0))))
                                      ^^^^^^^
out/third_party/testsuite/align.wast:25: assert_malformed passed:
  out/third_party/testsuite/align/align.4.wast:1:37: alignment must be power-of-two
  (module (memory 0) (func (i64.store align=5 (i32.const 0) (i64.const 0))))
                                      ^^^^^^^
out/third_party/testsuite/align.wast:31: assert_invalid passed:
  error: alignment must not be larger than natural alignment (8)
  error: @0x00000023: OnStoreExpr callback failed
6/6 tests passed.
;;; STDOUT ;;)
